Fix alignment in mobile view

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@ body {
     height: 95vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     padding: 1px;
     background-color: black;
 }
